Fix header on mobile

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -26,7 +26,7 @@
 }
 
 .header-heading h1 {
-  font-size: 32px;
+  font-size: 2rem;
   font-weight: 600;
   margin: 0 0.25rem 0 0;
   padding: 0;
@@ -46,4 +46,16 @@
   font-size: 0.75rem;
   margin-top: 0.25rem;
   margin-bottom: 0;
+}
+
+@media only screen and (max-width: 430px) {
+  .header-heading h1 {
+    font-size: 1.25rem;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .header-heading h1 {
+    font-size: 1rem;
+  }
 }
